remove bootstrap, it was causing conflicts. Add Tailwind map file. Change main layout with Flowbite.

--- a/Blazor_WASM_Tailwind_Flowbite_Example/Blazor_WASM_Tailwind_Flowbite_Example.csproj
+++ b/Blazor_WASM_Tailwind_Flowbite_Example/Blazor_WASM_Tailwind_Flowbite_Example.csproj
@@ -27,4 +27,8 @@
     <None Include="Styles\StyleComponents\Cards\CardWithButton.razor" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\css\bootstrap\" />
+  </ItemGroup>
+
 </Project>
